<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DoneThat</string>
    <string name="action_save">Speichern</string>
    <string name="title_activity_trip_notes">Alle meine Reisen</string>
    <string name="title_activity_note_detail">Eine neue Notiz</string>
    <string name="title_activity_edit_trip">Eine neue Reise</string>
    <string name="title_activity_all_trips">Meine Reisen</string>
    <string name="title_activity_edit_note">Notiz bearbeiten</string>
    <string name="title_activity_twitter_auth">Mit Twitter anmelden</string>
    <string name="hero_login_title">Mit Twitter anmelden</string>
    <string name="hero_login_description">Du kannst die Applikation auch vollständig anonym verwenden, aber um deine deine Reisen zu synchronisieren, musst du dich einmal mit deinem Twitter Account anmelden.</string>
    <string name="hero_login_description_logged_in">Hallo %s, schön dass du dich schon angemeldet hast. Wenn du dich auf www.donethat.de auch schon angemeldet hast, kannst du deine Reisen jederzeit synchronisieren.</string>
    <string name="hero_trips_title_no_trips">Neue Reise</string>
    <string name="hero_trips_title">Meine Reisen</string>
    <string name="hero_trips_description">Schön dass du schon eine Reise angelegt hast. Nun ist es an der Zeit, ein paar Stationen einzutragen.</string>
    <string name="hero_trips_description_no_trips">Jede Reise beginnt mit dem ersten Schritt. Leg am besten gleich mal eine neue Reise an.</string>
    <string name="pref_syncServerTitle">Sync Server</string>
    <string name="pref_syncServerSummary">Die vollständige URL zum Sync-Service</string>
    <string name="pref_syncGroupTitle">Sync</string>
    <string name="pref_miscGroupTitle">Misc</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Abbrechen</string>
    <string name="title_activity_trips">TripsActivity</string>
    <string name="title_my_trips">My Trips</string>
    <string name="title_connect">Connect</string>
    <string name="title_browse">Browse</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    // ACTIONS    <string name="action_add_trip">Create New Trip</string>
    // CARDS    <string name="card_trip_title">Trip Title</string>
    <string name="card_trip_subtitle">This is a trip subtitle</string>
    // Notes Fragment    <string name="notes_trip_empty">There are no notes available</string>
    <string name="notes_trip_empty_description">Do you have something to say about this trip? Click this card to add a new Note!</string>
    // Edit Notes    <string name="edit_notes_date">Date</string>
    <string name="edit_notes_location">Location</string>
    <string name="edit_notes_location_name">Location Name</string>
    <string name="edit_notes_location_switch">Automatic Coordinates</string>
    <string name="edit_notes_title">Title</string>
    <string name="edit_notes_description">Description</string>
    <string name="action_save_note">Save</string>

</resources>