<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/EditView"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditNoteActivity"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editDate"
        android:hint="@string/edit_notes_date"
        android:layout_gravity="center_horizontal"
        android:focusable="false"
        android:clickable="true"
        style="@android:style/Widget.DeviceDefault.Light.Spinner"
        android:enabled="false" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTitle"
        android:layout_gravity="center_horizontal"
        android:hint="@string/edit_notes_title" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editDescription"
        android:layout_gravity="center_horizontal"
        android:hint="@string/edit_notes_description" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_notes_location_switch"
        android:id="@+id/switchLocation"
        android:checked="true"
        android:layout_gravity="right"
        android:enabled="true"
        android:layout_marginTop="20dp" />

    <EditText
        style="@android:style/Widget.DeviceDefault.Light.Spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editLocation"
        android:hint="@string/edit_notes_location"
        android:layout_gravity="center_horizontal"
        android:focusable="false"
        android:clickable="true"
        android:enabled="false"
        android:visibility="invisible" />

</LinearLayout>